@@ -1,5 +1,5 @@
 INCLUDES = $(all_includes)
 METASOURCES = AUTO
 noinst_LIBRARIES =  libagents.a
-noinst_HEADERS = rksaveagent.h rkloadagent.h showedittextfileagent.h
-libagents_a_SOURCES = rksaveagent.cpp rkloadagent.cpp showedittextfileagent.cpp
+noinst_HEADERS = rksaveagent.h rkloadagent.h showedittextfileagent.h rkquitagent.h
+libagents_a_SOURCES = rksaveagent.cpp rkloadagent.cpp showedittextfileagent.cpp rkquitagent.cpp
